<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.froylan.jaguares.MainActivity">

    <TextView
        android:textStyle="bold"
        android:id="@+id/text"
        android:gravity="center"
        android:textSize="20sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Hello World!" />
    <Spinner
        android:paddingLeft="20dp"
        android:textStyle="bold"
        android:id="@+id/spinerCarreras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ></Spinner>
    <LinearLayout
        android:paddingLeft="20dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".9"
        android:background="@drawable/huellas">
                <RadioButton
                    android:id="@+id/radio_Tutorias"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/tutorias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_SS"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/servicio_social"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_I"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/idiomas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_CN"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/centro_de_negocios"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_SE"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/servicios_escolares"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_R"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/residencias"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_CD"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/cultura_y_deportes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
                <RadioButton
                    android:id="@+id/radio_B"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:text="@string/becas"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />







    </LinearLayout>

    <LinearLayout
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".1">

        <Button
            android:textStyle="bold"
            android:textColor="@color/letra"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="5dp"
            android:background="@color/botones"
            android:id="@+id/ingresar"
            android:text="Ingresar"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content" />

        <Button
            android:textStyle="bold"
            android:textColor="@color/letra"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/botones"
            android:text="cerrar sesion"
            android:id="@+id/cerrar"
            android:layout_width="0dp"
            android:layout_weight=".5"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
